# trello-board

./: .eslintrc.cjs  .gitignore  Cargo.toml  Makefile.toml  README.md  Trunk.toml  default.nix  flake.nix  index.html  leptosfmt.toml  package-lock.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  uno.config.ts
.github/workflows/: checks.yml  gh-pages.yml  node.js.yml
src/: App.tsx  app.rs  index.css  main.rs  models.rs  types.ts
src/components/: CardContainer.tsx  CardDetail.tsx  ColumnContainer.tsx  CustomInput.tsx  DeleteConfirmation.tsx  KanbanBoard.tsx  board.rs  card_container.rs  card_details.rs  column_container.rs  delete_confirmation.rs  mod.rs
src/components/Card/: CardContainer.tsx  CardDetail.tsx
src/components/Card/hooks/: useCard.ts
src/components/__tests__/: CreateColumn.spec.ts  DeleteColumn.spec.ts  Test.spec.tsx
src/components/icons/: grip_vertical.rs  image.rs  minus.rs  mod.rs  panel_top.rs  plus_circle.rs  trash.rs  x.rs
src/components/store/: KanbanProvider.tsx  useColumns.ts
src/hooks/: useSortableConf.ts
src/icons/: AddIcon.tsx  TrashIcon.tsx
src/store/: kanban.rs  mod.rs
src/utils/: createColumn.ts  filterColumn.ts  generateId.ts  handleReader.ts
