[package]
name = "trello-board"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
leptos = { version = "0.6", features = ["nightly", "csr"] }
leptos_meta = { version = "0.6", features = ["nightly", "csr"] }
wasm-bindgen = "=0.2.91"
unocss-classes = { version = "2.0.0", features = ["runtime"] }
leptos-use = { version = "0.10.4", features = ["serde"] }
serde = { version = "1.0.197", features = ["serde_derive"] }

[features]
development = []

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
